--- a/06 - Custom Status/.env.example
+++ b/06 - Custom Status/.env.example
@@ -1,3 +1,3 @@
-TOKEN = YOUR_BOT_TOKEN
-CLIENT_ID = YOUR_BOT_ID
-GUILD_ID = YOUR_SERVER_ID
+TOKEN = MTA4NDMyODY2NDg2NDQxMTczOA.GQEAx_.SC5Y9HiSsjQurRwJjwvSM1WxSs97UB7ckBH6vw
+CLIENT_ID = 1084328664864411738
+GUILD_ID = 963636867784396810
